[project]
name = "piepietweaks"
description = "Tweaks and simple nodes for usability and common needs"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Dependencies for PiePie - Lucidflux node", "omegaconf>=2.0.0", "einops>=0.6.0", "diffusers>=0.21.0", "accelerate>=0.20.0"]

[project.urls]
Repository = "https://github.com/PiePieDesign/PiePieTweaks"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/PiePieDesign/PiePieTweaks/wiki"
"Bug Tracker" = "https://github.com/PiePieDesign/PiePieTweaks/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "PiePieTweaks"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

